@@ -1,5 +1,7 @@
 03 April 2008
 
+* Support an extra space on the optional FLAGS response when fetching a mail,
+  fixes problems with CommuniGate Pro, thanks to Anthony Wood.
 * New flags, no-cram-md5 and no-login, on IMAP accounts to force fdm not to
   use cram-md5 or login authentication even if the server supports it. From
   Anthony Wood.
@@ -817,4 +819,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.190 2008-04-03 18:46:24 nicm Exp $
+$Id: CHANGES,v 1.191 2008-04-03 18:49:22 nicm Exp $
